--- a/src/AppBundle/Resources/style/_basicStyle.scss
+++ b/src/AppBundle/Resources/style/_basicStyle.scss
@@ -141,3 +141,31 @@ body {
 .position-topmost{
   z-index: 10000;
 }
+
+.alert{
+  margin-bottom: 0;
+  padding: 0;
+}
+
+.dd66{
+  color: #66dd66;
+  font-size: 20px;
+}
+
+.dd77{
+  color: red;
+  font-size: 20px;
+}
+
+.color-background-text{
+  display: inline-block;
+  padding: 5px;
+  margin: 0 0 20px;
+}
+.color-background-text:hover {
+  background-color: yellow;
+}
+
+.margin-0{
+  margin: 0;
+}
