--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -3,25 +3,43 @@
 {% block title %}AppBundle:SecurityController:login{% endblock %}
 
 {% block body %}
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+<div class="container allign-center">
+    <div class="row">
+        <div class="col-lg-4 col-lg-offset-4 col-sm-12">
+            {% if error %}
+                <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    Log in
+                </div>
+                <div class="panel-body">
+                    <form action="{{  path('login') }}" method="post" class="form-horizontal">
+                        <fieldset class="form-group">
+                            <label class="control-label label-width" for="username">User name: </label>
+                            <input type="text" id="username" name="_username" value="{# last_email #}" />
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label class="control-label label-width" for="password">Password: </label>
+                            <input type="password" id="password" name="_password" />
+                        </fieldset>
+                        <fieldset>
+                            <label for="remember_me">Remember me</label>
+                            <input type="checkbox" id="remember_me" name="_remember_me" />
+                        </fieldset>
 
-    <form action="{{ path('login') }}" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+                        <input type="hidden" name="_csrf_token"
+                               value="{{ csrf_token('authenticate') }}">
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password" />
+                        <button class="btn btn-4" type="submit">Log in</button>
+                    </form>
 
-        <input type="checkbox" id="remember_me" name="_remember_me" />
-        <label for="remember_me">Remember me</label>
-
-        <input type="hidden" name="_csrf_token"
-               value="{{ csrf_token('authenticate') }}">
-
-        <button type="submit">login</button>
-    </form>
-
-    <a href="{{ path('fbConnect') }}">Login with Facebook</a>
+                </div>
+                <div class="panel-footer">
+                    <div class="text-center"><b><a href="{{ path('fbConnect') }}">Login with Facebook</a></b></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
