--- a/src/AppBundle/Resources/views/TestPages/results.html.twig
+++ b/src/AppBundle/Resources/views/TestPages/results.html.twig
@@ -3,92 +3,100 @@
 {% set correct = 0 %}
 
 {% block body %}
+    <div class="grey-background">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-12">
+                    {% for group in app.session.get('questionGroups') %}
+                        {% if not group[0].book.title %}
+                            <b><h3>{{ loop.index ~ '. PHP Test' }}</h3></b>
+                        {% else %}
+                            <b>{{ loop.index }}.{{ group[0].book.title }}</b><br>
+                        {% endif %}
+                            {% for question in group %}
+                                {% if app.session.get('isCorrect')[question.id]  %}
+                                    {% set correct = correct + 1 %}
+                                    <a class="dd66 color-background-text" title="{{ question.title }}" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a>
+                                {% else %}
+                                    <a class="dd77 color-background-text" title="{{ question.title }}" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a>
+                                {% endif %}
+                            {% endfor %}<br>
+                        {% endfor %}
 
-    {% for group in app.session.get('questionGroups') %}
-        {% if not group[0].book.title %}
-            <b>{{ loop.index ~ '. PHP Test' }}</b><br>
-        {% else %}
-            <b>{{ loop.index }}.{{ group[0].book.title }}</b><br>
-        {% endif %}
-            {% for question in group %}
-                {% if app.session.get('isCorrect')[question.id]  %}
-                    {% set correct = correct + 1 %}
-                    <a style="color: #66dd66" title="{{ question.title }}" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a>
-                {% else %}
-                    <a style="color: #C82829" title="{{ question.title }}" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a>
-                {% endif %}
-            {% endfor %}<br>
-        {% endfor %}
-
-    <div class="alert alert-info page-header">
-        <h3>
-            You've scored {{ correct ~ '/' ~ app.session.get('isCorrect')|length }}
-        </h3>
-    </div>
-
-    {% if solved %}
-    <div class="alert alert-warning page-header">
-        <h4>
-            You've used the "Solve it" option on this question.
-        </h4>
-    </div>
-    {% endif %}
-
-    {{ form_start(form) }}
-    {{ index ~ '.'}}{{ current.content|replace({ "<pre>" : "<pre><code class='language-php'><xmp>" ,
-    "</pre>" : "</xmp></code></pre>" })|raw }}
-
-    {% for answer in form.answers %}
-        {% if answer.vars.checked %}
-            {% for option in current.answers %}
-                {% if option.id == answer.vars.value and option.correct %}
-                    <div class="alert alert-success">
-                        {{ charArray[loop.index] }}{{ form_widget(answer, {disabled : 'true'}) }}
-                        {{ form_label(answer)|
-                        replace({ "<pre>" : "<pre><code class='language-php'><xmp>" ,
-                            "</pre>" : "</xmp></code></pre>" })|raw }}
+                    <div class="alert alert-info ">
+                        <h3>
+                            You've scored {{ correct ~ '/' ~ app.session.get('isCorrect')|length }}
+                        </h3>
                     </div>
-                {% elseif option.id == answer.vars.value and not option.correct %}
-                    <div class="alert alert-danger">
-                        {{ charArray[loop.index] }}{{ form_widget(answer, {disabled : 'true'}) }}
-                        {{ form_label(answer)|
-                        replace({ "<pre>" : "<pre><code class='language-php'><xmp>" ,
-                            "</pre>" : "</xmp></code></pre>" })|raw }}
-                    </div>
-                {% endif %}
-            {% endfor %}
-        {% else %}
-            {% for option in current.answers %}
-                {% if option.id == answer.vars.value and option.correct %}
-                    <div class="alert alert-success">
-                        {{ charArray[loop.index] }}{{ form_widget(answer, {disabled : 'true'}) }}
-                        {{ form_label(answer)|
-                        replace({ "<pre>" : "<pre><code class='language-php'><xmp>" ,
-                            "</pre>" : "</xmp></code></pre>" })|raw }}
-                    </div>
-                {% elseif option.id == answer.vars.value and not option.correct %}
-                    <div class="alert">
-                        {{ charArray[loop.index] }}{{ form_widget(answer, {disabled : 'true'}) }}
-                        {{ form_label(answer)|
-                        replace({ "<pre>" : "<pre><code class='language-php'><xmp>" ,
-                            "</pre>" : "</xmp></code></pre>" })|raw }}
-                    </div>
-                {% endif %}
-            {% endfor %}
-        {% endif %}
-    {% endfor %}
 
-    {{ form_widget(form.previous) }}
-    {{ form_widget(form.next) }}
-    {{ form_end(form) }}
+                    {% if solved %}
+                    <div class="alert alert-warning">
+                        <h4>
+                            You've used the "Solve it" option on this question.
+                        </h4>
+                    </div>
+                    {% endif %}
 
-    {% if app.session.get('isCorrect')[current.id] is not defined or not app.session.get('isCorrect')[current.id] %}
-        <p>Your choice is incorrect.</p>
-    {% else %}
-        <p>Your choice is correct!</p>
-    {% endif %}
-    <div class="visible">
-        {{ current.explanation|
-        replace({ "<pre>" : "<pre><code class='language-php'><xmp>" , "</pre>" : "</xmp></code></pre>" })|raw }}
+                    {{ form_start(form) }}
+                    {{ index ~ '.'}}{{ current.content|replace({ "<pre>" : "<pre><code class='language-php'><xmp>" ,
+                    "</pre>" : "</xmp></code></pre>" })|raw }}
+
+                    {% for answer in form.answers %}
+                        {% if answer.vars.checked %}
+                            {% for option in current.answers %}
+                                {% if option.id == answer.vars.value and option.correct %}
+                                    <div class="alert alert-success">
+                                        {{ charArray[loop.index] }}{{ form_widget(answer, {disabled : 'true'}) }}
+                                        {{ form_label(answer)|
+                                        replace({ "<pre>" : "<pre><code class='language-php'><xmp>" ,
+                                            "</pre>" : "</xmp></code></pre>" })|raw }}
+                                    </div>
+                                {% elseif option.id == answer.vars.value and not option.correct %}
+                                    <div class="alert alert-danger">
+                                        {{ charArray[loop.index] }}{{ form_widget(answer, {disabled : 'true'}) }}
+                                        {{ form_label(answer)|
+                                        replace({ "<pre>" : "<pre><code class='language-php'><xmp>" ,
+                                            "</pre>" : "</xmp></code></pre>" })|raw }}
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+                        {% else %}
+                            {% for option in current.answers %}
+                                {% if option.id == answer.vars.value and option.correct %}
+                                    <div class="alert alert-success">
+                                        {{ charArray[loop.index] }}{{ form_widget(answer, {disabled : 'true'}) }}
+                                        {{ form_label(answer)|
+                                        replace({ "<pre>" : "<pre><code class='language-php'><xmp>" ,
+                                            "</pre>" : "</xmp></code></pre>" })|raw }}
+                                    </div>
+                                {% elseif option.id == answer.vars.value and not option.correct %}
+                                    <div class="alert">
+                                        {{ charArray[loop.index] }}{{ form_widget(answer, {disabled : 'true'}) }}
+                                        {{ form_label(answer)|
+                                        replace({ "<pre>" : "<pre><code class='language-php'><xmp>" ,
+                                            "</pre>" : "</xmp></code></pre>" })|raw }}
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+                        {% endif %}
+                    {% endfor %}
+
+                    <div class="allignCenter">
+                        {{ form_widget(form.previous, {'attr': {'class': 'btn btn-3'}}) }} &nbsp;
+                        {{ form_widget(form.next, {'attr': {'class': 'btn btn-3'}}) }} <br>
+                    </div>
+
+                    {% if app.session.get('isCorrect')[current.id] is not defined or not app.session.get('isCorrect')[current.id] %}
+                        <p>Your choice is incorrect.</p>
+                    {% else %}
+                        <p>Your choice is correct!</p>
+                    {% endif %}
+                    <div class="visible">
+                        {{ current.explanation|
+                        replace({ "<pre>" : "<pre><code class='language-php'><xmp>" , "</pre>" : "</xmp></code></pre>" })|raw }}
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
